<resources>
    <string name="app_name">JustHaveFun</string>
    <string name="addevento">AddEvento</string>
    <string name="aggiungievento">Aggiungi Evento</string>
    <string name="AggiungiNomeEvento">Aggiungi nome evento</string>
    <string name="InserireIlNomeDellEvento">Inserire il nome dell\'evento</string>
    <string name="AggiungiLaDescrizioneDellEvento">Aggiungi la descrizione dell\'evento</string>
    <string name="InserisciLaDescrizioneDellEvento">Inserisci la descrizione dell\'evento</string>
    <string name="conferma">Conferma</string>
    <string name="indietro">Indietro</string>
    <string name="nomeevento">Nome Evento</string>
    <string name="descrizioneevento">Descrizione Evento</string>
    <string name="effettuaprenotazione">Prenota</string>
    <string name="aggiungiCodiceEvento">Aggiungi Codice Evento</string>
    <string name="inserisciCodiceEvento">Inserisci Codice Evento</string>
    <string name="NomeCompletoEvento">Nome completo dell\'evento</string>
    <string name="inserisciRisposta">Inserisci Risposta</string>
    <string name="dammiCodice">Dammi il codice</string>
    <string name="avvisoPrenotazione">Ricordarsi di effettuare lo screenshot della schermata corrente e presentarsi con esso al locale.</string>
    <string name="nonSonoCompilatiTutti">Non sono stati compilati tutti i campi necessari!</string>
    <string name="modificainfinestrella">Modifica</string>
    <string name="eliminainfinestrella">Elimina</string>
    <string name="modificaNomeEvento">Modifica il nome evento</string>
    <string name="modificaDescrizioneEvento">Modifica la descrizione evento</string>
    <string name="modificaCodiceEvento">Modificare il codice evento</string>
    <string name="inserireDescrizioneEvento">Inserire la descrizione</string>
    <string name="campiObbligatori">Si necessita la compilazione di tutti i campi!</string>
    <string name="AccediORegistrati">Accedi o registrati</string>
    <string name="InserireEmail">Inserisci il tuo indirizzo email</string>
    <string name="InserireEmailHint">Inserire email</string>
    <string name="InserirePassword">Password</string>
    <string name="InserirePasswordHint">Inserire la password</string>
    <string name="RegistratiQui">Registrati qui</string>
    <string name="EffettuaLogIn">Effettua Log-in</string>
    <string name="LogIn">Log-in</string>
    <string name="Accedi">Accedi</string>
    <string name="CliccaAccediORegistrati">Clicca su registra se non hai già un account, altrimenti accedi.</string>
    <string name="LogOut">Log-out</string>
</resources>
