<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.salvatorepetrillo.justhavefun.AggiungiEvento">

    <TextView
        android:id="@+id/txtAddNomeEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/AggiungiNomeEvento"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editAddNomeEvento"
        app:layout_constraintEnd_toStartOf="@+id/editAddNomeEvento"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editAddNomeEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/InserireIlNomeDellEvento"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtAddNomeEvento"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAddDescrizioneEvento"
        android:layout_width="154dp"
        android:layout_height="52dp"
        android:text="@string/AggiungiLaDescrizioneDellEvento"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editAddDescrizioneEvento"
        app:layout_constraintEnd_toStartOf="@+id/editAddDescrizioneEvento"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editAddDescrizioneEvento"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/InserisciLaDescrizioneDellEvento"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtAddDescrizioneEvento"
        app:layout_constraintTop_toBottomOf="@+id/editAddNomeEvento" />

    <Button
        android:id="@+id/btnAddConferma"
        android:layout_width="101dp"
        android:layout_height="56dp"
        android:layout_marginBottom="128dp"
        android:text="@string/conferma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTornaIndietro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTornaIndietro"
        android:layout_width="98dp"
        android:layout_height="56dp"
        android:layout_marginBottom="128dp"
        android:text="@string/indietro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAddConferma" />

    <EditText
        android:id="@+id/editAddNumeroEvento"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Aggiungi codice evento"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnTornaIndietro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddDescrizioneEvento"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/txtAddNumeroEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/inserisciCodiceEvento"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnAddConferma"
        app:layout_constraintEnd_toStartOf="@+id/editAddNumeroEvento"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddDescrizioneEvento" />
</android.support.constraint.ConstraintLayout>
